# statsd-tg

./: AUTHORS  ChangeLog  Dockerfile  README  configure.ac
contrib/docker/: Dockerfile  build.sh  deploy.sh
src/: Makefile.am  statsd-tg.c  statsd-tg.pod
